# vscmake

./: README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/lib_shared/: CMakeLists.txt  pisym.cpp  pisym.h
src/lib_util/: CMakeLists.txt
